--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </div>
     <div class="main-content">
       <div class="menu">
-        <div class="menu-item">Menu Item 1</div>
-        <div class="menu-item">Menu Item 2</div>
+        <div class="menu-item">HOME</div>
+        <div class="menu-item">ABOUT US </div>
         <div class="menu-item">Menu Item 3</div>
         <div class="menu-item">Menu Item 4</div>
         <div class="menu-item">Menu Item 5</div>
