--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HELLOLUMBINI</title></title>
+  <title>HELLOLUMBINI.COM</title>
   <style>
     body {
       margin: 0;
@@ -44,11 +44,42 @@
     .nav-menu a:hover {
       background-color: #004E8C; /* Similar to Online Khabar's hover color */
     }
+
+    /* Sub-header menu styles */
+    .sub-header {
+      background-color: #f5f5f5;
+      padding: 5px 10px;
+      margin-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .sub-menu {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .sub-menu li {
+      margin-right: 10px;
+    }
+
+    .sub-menu a {
+      color: #333;
+      text-decoration: none;
+      padding: 5px 10px;
+    }
+
+    .sub-menu a:hover {
+      background-color: #eee;
+    }
   </style>
 </head>
 <body>
   <header class="header">
-    <div class="logo">Your Website Name</div>
+    <div class="logo">HEllo LUMBINI.com</div>
     <nav class="nav-menu">
       <li><a href="#">Home</a></li>
       <li><a href="#">News</a></li>
@@ -57,6 +88,16 @@
       <li><a href="#">More</a></li>
     </nav>
   </header>
+
+  <div class="sub-header">
+    <nav class="sub-menu">
+      <li><a href="#">India</a></li>
+      <li><a href="#">World</a></li>
+      <li><a href="#">Business</a></li>
+      <li><a href="#">Cricket</a></li>
+      <li><a href="#">Entertainment</a></li>
+    </nav>
+  </div>
 
   </body>
 </html>
